@@ -1,8 +1,9 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
 --------------------------------------------------------------------------------------------------
-24/03/22 (TRUST)  Major Change: Pb_Multiphase can handle arbitrary additional equations (LIST) to handle turbulence modelling
-24/03/22 (TRUST)  Major Change: The CoviMAC discretization is improved and leads to more stable results
+25/03/22 (TRUST)  Fix         : Champ_front_synt boundary condition had some bugs which are fixed now.
+25/03/22 (TRUST)  Major Change: Pb_Multiphase can handle arbitrary additional equations (LIST) to handle turbulence modelling
+25/03/22 (TRUST)  Major Change: The CoviMAC discretization is improved and leads to more stable results
 08/03/22 (TRUST)  Fix         : Keyword Pre_calc_pression crashed under certain circumstancies due to unitialized values of tau_tan
 22/02/22 (TRUST)  V&V         : Add new validation forms poiseuille_vdf & cavite_entrainee_2D
 22/02/22 (TRUST)  Fix         : It is possible to use now an implicit scheme with the VDF option traitement_coins (necessary for a Poiseuille test case for example)
